--- a/package.json
+++ b/package.json
@@ -123,6 +123,8 @@
     "@types/react-router-redux": "5.0.18",
     "@types/redux-logger": "3.0.7",
     "@types/sinon": "7.0.13",
+    "@typescript-eslint/eslint-plugin": "1.11.0",
+    "@typescript-eslint/parser": "1.11.0",
     "asar": "2.0.1",
     "concurrently": "4.1.1",
     "cross-env": "5.2.0",
@@ -135,6 +137,14 @@
     "electron-devtools-installer": "2.2.4",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.14.0",
+    "eslint": "6.0.1",
+    "eslint-config-standard-with-typescript": "7.1.0",
+    "eslint-loader": "^2.2.1",
+    "eslint-plugin-import": "2.18.0",
+    "eslint-plugin-node": "9.1.0",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-standard": "4.0.0",
     "express": "4.17.1",
     "file-loader": "4.0.0",
     "html-webpack-plugin": "3.2.0",
