feat(layout): add dataset view with draggable sidebar, datasets picker, etc (#9)

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,6 @@
   "rules": {
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-member-accessibility": "off",
-    "react/prop-types": [2, { ignore: ['children'] }]
+    "react/prop-types": "off"
   }
 }
