--- a/package.json
+++ b/package.json
@@ -139,7 +139,7 @@
     "enzyme-adapter-react-16": "1.14.0",
     "eslint": "6.0.1",
     "eslint-config-standard-with-typescript": "7.1.0",
-    "eslint-loader": "^2.2.1",
+    "eslint-loader": "2.2.1",
     "eslint-plugin-import": "2.18.0",
     "eslint-plugin-node": "9.1.0",
     "eslint-plugin-promise": "4.2.1",
