--- a/package.json
+++ b/package.json
@@ -171,6 +171,9 @@
     "webpack-merge": "4.2.1"
   },
   "dependencies": {
+    "@types/react-transition-group": "2.9.2",
+    "@typescript-eslint/eslint-plugin": "1.11.0",
+    "@typescript-eslint/parser": "1.11.0",
     "electron-debug": "3.0.1",
     "font-awesome": "4.7.0",
     "history": "4.9.0",
@@ -179,7 +182,8 @@
     "react-redux": "7.1.0",
     "react-router": "5.0.1",
     "react-router-dom": "5.0.1",
-    "react-router-redux": "^5.0.0-alpha.6",
+    "react-router-redux": "5.0.0-alpha.6",
+    "react-transition-group": "4.2.1",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0",
     "source-map-support": "0.5.12"
