--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "@types/enzyme": "3.10.2",
     "@types/history": "4.7.2",
     "@types/jest": "24.0.15",
+    "@types/json-schema": "^7.0.3",
     "@types/node": "12.6.2",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
