feat(api): add state, reducers, actions, and api calls

--- a/package.json
+++ b/package.json
@@ -114,7 +114,7 @@
     "@types/enzyme": "3.10.2",
     "@types/history": "4.7.2",
     "@types/jest": "24.0.15",
-    "@types/json-schema": "^7.0.3",
+    "@types/json-schema": "7.0.3",
     "@types/node": "12.6.2",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
@@ -178,6 +178,7 @@
     "electron-debug": "3.0.1",
     "font-awesome": "4.7.0",
     "history": "4.9.0",
+    "moment": "2.24.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-redux": "7.1.0",
