--- a/package.json
+++ b/package.json
@@ -140,7 +140,7 @@
     "electron-devtools-installer": "2.2.4",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.14.0",
-    "eslint": "^6.0.1",
+    "eslint": "6.0.1",
     "eslint-config-standard-with-typescript": "7.1.0",
     "eslint-loader": "2.2.1",
     "eslint-plugin-import": "2.18.0",
@@ -175,8 +175,10 @@
     "webpack-merge": "4.2.1"
   },
   "dependencies": {
+    "@handsontable/react": "3.0.0",
     "electron-debug": "3.0.1",
     "font-awesome": "4.7.0",
+    "handsontable": "^7.1.0",
     "history": "4.9.0",
     "moment": "2.24.0",
     "react": "16.8.6",
