--- a/package.json
+++ b/package.json
@@ -178,7 +178,7 @@
     "@handsontable/react": "3.0.0",
     "electron-debug": "3.0.1",
     "font-awesome": "4.7.0",
-    "handsontable": "^7.1.0",
+    "handsontable": "6.2.2",
     "history": "4.9.0",
     "moment": "2.24.0",
     "react": "16.8.6",
