--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
   ],
   "homepage": "https://qri.io",
   "devDependencies": {
+    "@types/classnames":"2.2.9",
     "@types/enzyme": "3.10.2",
     "@types/history": "4.7.2",
     "@types/jest": "24.0.15",
@@ -176,9 +177,10 @@
   },
   "dependencies": {
     "@handsontable/react": "3.0.0",
+    "classnames": "2.2.6",
     "electron-debug": "3.0.1",
     "font-awesome": "4.7.0",
-    "handsontable": "^7.1.0",
+    "handsontable": "6.2.2",
     "history": "4.9.0",
     "moment": "2.24.0",
     "react": "16.8.6",
