--- a/package.json
+++ b/package.json
@@ -15,12 +15,10 @@
     "build": "npm run build-main && npm run build-renderer",
     "start": "cross-env NODE_ENV=production electron ./app/",
     "start-hot": "cross-env HOT=1 NODE_ENV=development electron ./app/main.development",
-    "postinstall": "npm run build",
+    "postinstall": "electron-builder install-app-deps",
     "dev": "npm run hot-server -- --start-hot",
-    "package": "npm run build && build --publish never",
-    "package-win": "npm run build && build --win --x64",
-    "package-linux": "npm run build && build --linux",
-    "package-all": "npm run build && build -mwl",
+    "pack": "npm run build && electron-builder --dir",
+    "dist": "npm run build && electron-builder",
     "lint": "./node_modules/.bin/eslint --fix --ext tsx --ext ts app/",
     "cleanup": "mop -v"
   },
@@ -111,7 +109,7 @@
   ],
   "homepage": "https://qri.io",
   "devDependencies": {
-    "@types/classnames":"2.2.9",
+    "@types/classnames": "2.2.9",
     "@types/enzyme": "3.10.2",
     "@types/history": "4.7.2",
     "@types/jest": "24.0.15",
