--- a/package.json
+++ b/package.json
@@ -69,6 +69,9 @@
       "main.js.map",
       "package.json"
     ],
+    "extraResources": [
+      "backend/"
+    ],
     "directories": {
       "buildResources": "resources",
       "output": "release"
