--- a/package.json
+++ b/package.json
@@ -178,6 +178,7 @@
   },
   "dependencies": {
     "@handsontable/react": "3.0.0",
+    "@types/underscore": "^1.9.2",
     "classnames": "2.2.6",
     "electron-debug": "3.0.1",
     "font-awesome": "4.7.0",
@@ -193,7 +194,8 @@
     "react-transition-group": "4.2.1",
     "redux": "4.0.4",
     "redux-thunk": "2.3.0",
-    "source-map-support": "0.5.12"
+    "source-map-support": "0.5.12",
+    "underscore": "^1.9.1"
   },
   "devEngines": {
     "node": ">=6.x",
