--- a/package.json
+++ b/package.json
@@ -125,11 +125,11 @@
     "@types/react-router": "5.0.3",
     "@types/react-router-dom": "4.3.4",
     "@types/react-router-redux": "5.0.18",
+    "@types/react-tooltip": "3.9.3",
     "@types/react-transition-group": "2.9.2",
     "@types/redux-logger": "3.0.7",
-    "@types/react-tooltip": "3.9.3",
-    "@types/underscore": "1.9.2",
     "@types/sinon": "7.0.13",
+    "@types/underscore": "1.9.2",
     "@typescript-eslint/eslint-plugin": "1.11.0",
     "@typescript-eslint/parser": "1.11.0",
     "asar": "2.0.1",
@@ -179,6 +179,10 @@
     "webpack-merge": "4.2.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "1.2.22",
+    "@fortawesome/free-regular-svg-icons": "5.10.2",
+    "@fortawesome/free-solid-svg-icons": "5.10.2",
+    "@fortawesome/react-fontawesome": "0.1.4",
     "@handsontable/react": "3.0.0",
     "classnames": "2.2.6",
     "electron-debug": "3.0.1",
