--- a/package.json
+++ b/package.json
@@ -192,7 +192,8 @@
     "moment": "2.24.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-json-view": "^1.19.1",
+    "react-electron-contextmenu": "1.0.0",
+    "react-json-view": "1.19.1",
     "react-redux": "7.1.0",
     "react-router": "5.0.1",
     "react-router-dom": "5.0.1",
