fix(windows): Fix Windows crashes at startup. Improve installer.
Recently added menu item functionality broken Windows at startup. Add some options to the installer so that it behaves more like a normal application installer.

--- a/package.json
+++ b/package.json
@@ -79,6 +79,11 @@
     "win": {
       "target": "nsis"
     },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "runAfterFinish": false
+    },
     "linux": {
       "target": [
         "deb",
