--- a/package.json
+++ b/package.json
@@ -187,6 +187,7 @@
     "@handsontable/react": "3.0.0",
     "classnames": "2.2.6",
     "electron-debug": "3.0.1",
+    "electron-updater": "4.1.2",
     "font-awesome": "4.7.0",
     "handsontable": "6.2.2",
     "history": "4.9.0",
