--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qri-desktop",
   "productName": "Qri Desktop",
-  "version": "0.0.1",
+  "version": "0.1.0-rc1",
   "description": "Version your data with the Qri desktop app!",
   "main": "./main.js",
   "author": {
