fix: add production html to package.json files

--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "files": [
       "dist/",
       "node_modules/",
-      "app.html",
+      "app.production.html",
       "main.js",
       "main.js.map",
       "package.json"
