test(onboarding e2e): add initial onboarding end-2-end test
This lays out a bunch of key techniques for for working with spectron, while landing our first user-story-driven spectron test:
* spin up a new mock backend with a mock registry server attached
* use spectron to launch desktop with programmatic control
* accept terms by hitting enter
* create a new, valid account, hit enter
* add a mock data csv to the filesystem
* create a new dataset using the create dataset modal
* create an initial commit
* close the window
* cleanup the mock backend, removing all files created

techniques outlined:
* spinning up a temp backend without any setup & a mock registry
* filling in form fields
* wiring up id tags in production code for easier, semantic testing
* mocking file picking with spectron-fake-dialog
* examining router state

--- a/package.json
+++ b/package.json
@@ -122,7 +122,6 @@
     "@types/history": "4.7.2",
     "@types/jest": "24.0.15",
     "@types/json-schema": "7.0.3",
-    "@types/node": "12.6.2",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
     "@types/react-hot-loader": "4.1.0",
@@ -134,6 +133,7 @@
     "@types/react-transition-group": "2.9.2",
     "@types/redux-logger": "3.0.7",
     "@types/redux-testkit": "1.0.3",
+    "@types/rimraf": "2.0.2",
     "@types/sinon": "7.0.13",
     "@types/underscore": "1.9.2",
     "@typescript-eslint/eslint-plugin": "1.11.0",
@@ -169,9 +169,11 @@
     "react-test-renderer": "16.8.6",
     "redux-logger": "3.0.6",
     "redux-testkit": "1.0.6",
+    "rimraf": "3.0.0",
     "sass-loader": "7.1.0",
     "sinon": "7.3.2",
     "spectron": "7.0.0",
+    "spectron-fake-dialog": "0.0.1",
     "style-loader": "0.23.1",
     "ts-loader": "6.0.4",
     "ts-node": "8.3.0",
