--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
     "@types/react-tooltip": "3.9.3",
     "@types/react-transition-group": "2.9.2",
     "@types/redux-logger": "3.0.7",
+    "@types/redux-testkit": "1.0.3",
     "@types/sinon": "7.0.13",
     "@types/underscore": "1.9.2",
     "@typescript-eslint/eslint-plugin": "1.11.0",
@@ -167,6 +168,7 @@
     "react-hot-loader": "4.12.6",
     "react-test-renderer": "16.8.6",
     "redux-logger": "3.0.6",
+    "redux-testkit": "1.0.6",
     "sass-loader": "7.1.0",
     "sinon": "7.3.2",
     "spectron": "7.0.0",
