feat: meta-editor

--- a/package.json
+++ b/package.json
@@ -130,11 +130,14 @@
     "@types/react-router": "5.0.3",
     "@types/react-router-dom": "4.3.4",
     "@types/react-router-redux": "5.0.18",
+    "@types/react-select": "3.0.4",
+    "@types/react-tag-input": "6.1.2",
     "@types/react-tooltip": "3.9.3",
     "@types/react-transition-group": "2.9.2",
     "@types/redux-logger": "3.0.7",
     "@types/redux-testkit": "1.0.3",
     "@types/rimraf": "2.0.2",
+    "@types/shortid": "^0.0.29",
     "@types/sinon": "7.0.13",
     "@types/underscore": "1.9.2",
     "@typescript-eslint/eslint-plugin": "1.11.0",
@@ -162,6 +165,7 @@
     "eslint-plugin-standard": "4.0.0",
     "express": "4.17.1",
     "file-loader": "4.0.0",
+    "fork-ts-checker-webpack-plugin": "^1.5.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.8.0",
     "json-loader": "0.5.7",
@@ -213,17 +217,22 @@
     "lodash-es": "4.17.15",
     "moment": "2.24.0",
     "react": "16.8.6",
-    "react-dom": "16.8.6",
+    "react-dnd": "9.3.4",
+    "react-dnd-html5-backend": "9.3.4",
+    "react-dom": "16.9.0",
     "react-electron-contextmenu": "1.0.0",
     "react-json-view": "1.19.1",
     "react-redux": "7.1.0",
     "react-router": "5.0.1",
     "react-router-dom": "5.0.1",
     "react-router-redux": "5.0.0-alpha.6",
+    "react-select": "3.0.4",
+    "react-tag-input": "6.4.1",
     "react-tooltip": "3.10.0",
     "react-transition-group": "4.2.1",
     "redux": "4.0.4",
     "redux-thunk": "2.3.0",
+    "shortid": "^2.2.15",
     "source-map-support": "0.5.12",
     "underscore": "1.9.1",
     "use-debounce": "3.0.0"
