feat: make auto-generated datasetname valid, better errors

--- a/package.json
+++ b/package.json
@@ -137,7 +137,6 @@
     "@types/redux-logger": "3.0.7",
     "@types/redux-testkit": "1.0.3",
     "@types/rimraf": "2.0.2",
-    "@types/shortid": "^0.0.29",
     "@types/sinon": "7.0.13",
     "@types/underscore": "1.9.2",
     "@typescript-eslint/eslint-plugin": "1.11.0",
@@ -165,7 +164,7 @@
     "eslint-plugin-standard": "4.0.0",
     "express": "4.17.1",
     "file-loader": "4.0.0",
-    "fork-ts-checker-webpack-plugin": "^1.5.0",
+    "fork-ts-checker-webpack-plugin": "1.5.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.8.0",
     "json-loader": "0.5.7",
@@ -193,19 +192,20 @@
     "webpack-merge": "4.2.1"
   },
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-decorators": "^7.6.0",
-    "@babel/preset-env": "^7.6.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.6.0",
+    "@babel/plugin-proposal-class-properties": "7.5.5",
+    "@babel/plugin-proposal-decorators": "7.6.0",
+    "@babel/preset-env": "7.6.0",
+    "@babel/preset-react": "7.0.0",
+    "@babel/preset-typescript": "7.6.0",
     "@fortawesome/fontawesome-svg-core": "1.2.22",
     "@fortawesome/free-brands-svg-icons": "5.10.2",
     "@fortawesome/free-regular-svg-icons": "5.10.2",
     "@fortawesome/free-solid-svg-icons": "5.10.2",
     "@fortawesome/react-fontawesome": "0.1.4",
     "@handsontable/react": "3.0.0",
-    "@types/webpack-env": "^1.14.0",
-    "babel-loader": "^8.0.6",
+    "@types/webpack-env": "1.14.0",
+    "babel-loader": "8.0.6",
+    "change-case": "3.1.0",
     "classnames": "2.2.6",
     "deep-equal": "1.1.0",
     "electron-debug": "3.0.1",
@@ -232,7 +232,6 @@
     "react-transition-group": "4.2.1",
     "redux": "4.0.4",
     "redux-thunk": "2.3.0",
-    "shortid": "^2.2.15",
     "source-map-support": "0.5.12",
     "underscore": "1.9.1",
     "use-debounce": "3.0.0"
