--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,8 @@
 {
   "name": "qri-desktop",
   "productName": "Qri Desktop",
-  "version": "0.1.0-rc1",
-  "backendVersion": "0.9.0-alpha",
+  "version": "0.1.0",
+  "backendVersion": "0.9.0",
   "description": "Version your data with the Qri desktop app!",
   "main": "./main.js",
   "author": {
