feat: two-way table pagination, json preview

--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
     "@typescript-eslint/eslint-plugin": "1.11.0",
     "@typescript-eslint/parser": "1.11.0",
     "asar": "2.0.1",
+    "babel-polyfill": "6.26.0",
     "codecov": "3.5.0",
     "concurrently": "4.1.2",
     "cross-env": "5.2.0",
@@ -202,7 +203,6 @@
     "@fortawesome/free-regular-svg-icons": "5.10.2",
     "@fortawesome/free-solid-svg-icons": "5.10.2",
     "@fortawesome/react-fontawesome": "0.1.4",
-    "@handsontable/react": "3.0.0",
     "@types/webpack-env": "1.14.0",
     "babel-loader": "8.0.6",
     "change-case": "3.1.0",
@@ -213,7 +213,6 @@
     "electron-updater": "4.1.2",
     "eslint-utils": "1.4.2",
     "font-awesome": "4.7.0",
-    "handsontable": "6.2.2",
     "history": "4.9.0",
     "lodash-es": "4.17.15",
     "moment": "2.24.0",
