--- a/package.json
+++ b/package.json
@@ -236,6 +236,7 @@
     "react-router-dom": "5.1.2",
     "react-router-redux": "5.0.0-alpha.6",
     "react-select": "3.0.8",
+    "react-simplemde-editor": "4.1.0",
     "react-tag-input": "6.4.1",
     "react-tooltip": "3.11.1",
     "react-transition-group": "4.3.0",
