chore(deps): upgrade deps and add "regenerator-runtime"
removed `babel-polyfill` dep, it is deprecated: https://babeljs.io/docs/en/babel-polyfill

As per above docs added `core-js` and `regenerator-runtime` deps

Added global import of `regenerator-runtime` to `index.tsx`as per docs: https://www.npmjs.com/package/regenerator-runtime

Added `@babel/core` as dep as per babel upgrade docs: https://babeljs.io/docs/en/v7-migration#versioning-dependencies-blog-2017-12-27-nearing-the-70-releasehtml-peer-dependencies-integrations

--- a/package.json
+++ b/package.json
@@ -126,34 +126,33 @@
   "homepage": "https://qri.io",
   "devDependencies": {
     "@types/classnames": "2.2.9",
-    "@types/enzyme": "3.10.2",
-    "@types/history": "4.7.2",
-    "@types/jest": "24.0.15",
+    "@types/enzyme": "3.10.3",
+    "@types/history": "4.7.3",
+    "@types/jest": "24.0.22",
     "@types/json-schema": "7.0.3",
-    "@types/react": "16.8.23",
-    "@types/react-dom": "16.8.4",
+    "@types/react": "16.9.11",
+    "@types/react-dom": "16.9.4",
     "@types/react-hot-loader": "4.1.0",
-    "@types/react-redux": "7.1.1",
-    "@types/react-router": "5.0.3",
-    "@types/react-router-dom": "4.3.4",
+    "@types/react-redux": "7.1.5",
+    "@types/react-router": "5.1.2",
+    "@types/react-router-dom": "5.1.2",
     "@types/react-router-redux": "5.0.18",
-    "@types/react-select": "3.0.4",
+    "@types/react-select": "3.0.8",
     "@types/react-tag-input": "6.1.2",
-    "@types/react-tooltip": "3.9.3",
-    "@types/react-transition-group": "2.9.2",
+    "@types/react-tooltip": "3.11.0",
+    "@types/react-transition-group": "4.2.3",
     "@types/redux-logger": "3.0.7",
     "@types/redux-testkit": "1.0.3",
-    "@types/rimraf": "2.0.2",
-    "@types/sinon": "7.0.13",
-    "@types/underscore": "1.9.2",
-    "@typescript-eslint/eslint-plugin": "1.11.0",
-    "@typescript-eslint/parser": "1.11.0",
+    "@types/rimraf": "2.0.3",
+    "@types/sinon": "7.5.0",
+    "@types/underscore": "1.9.3",
+    "@typescript-eslint/eslint-plugin": "1.11",
+    "@typescript-eslint/parser": "1.11",
     "asar": "2.0.1",
-    "babel-polyfill": "6.26.0",
-    "codecov": "3.5.0",
-    "concurrently": "4.1.2",
-    "cross-env": "5.2.0",
-    "css-loader": "3.0.0",
+    "codecov": "3.6.1",
+    "concurrently": "5.0.0",
+    "cross-env": "6.0.3",
+    "css-loader": "3.2.0",
     "css-modules-require-hook": "4.2.3",
     "devtron": "1.4.0",
     "electron": "5.0.6",
@@ -162,87 +161,90 @@
     "electron-devtools-installer": "2.2.4",
     "electron-notarize": "0.2.0",
     "enzyme": "3.10.0",
-    "enzyme-adapter-react-16": "1.14.0",
-    "eslint": "6.0.1",
+    "enzyme-adapter-react-16": "1.15.1",
+    "eslint": "6.6.0",
     "eslint-config-standard-with-typescript": "7.1.0",
-    "eslint-loader": "2.2.1",
-    "eslint-plugin-import": "2.18.0",
-    "eslint-plugin-node": "9.1.0",
+    "eslint-loader": "3.0.2",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-node": "10.0.0",
     "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "7.14.2",
-    "eslint-plugin-standard": "4.0.0",
+    "eslint-plugin-react": "7.16.0",
+    "eslint-plugin-standard": "4.0.1",
     "express": "4.17.1",
-    "file-loader": "4.0.0",
-    "fork-ts-checker-webpack-plugin": "1.5.0",
+    "file-loader": "4.2.0",
+    "fork-ts-checker-webpack-plugin": "3.0.1",
     "identity-obj-proxy": "3.0.0",
-    "jest": "24.8.0",
+    "jest": "24.9.0",
     "json-loader": "0.5.7",
     "mini-css-extract-plugin": "0.8.0",
-    "node-sass": "4.12.0",
-    "react-hot-loader": "4.12.6",
-    "react-test-renderer": "16.8.6",
+    "node-sass": "4.13.0",
+    "react-hot-loader": "4.12.15",
+    "react-test-renderer": "16.11.0",
     "redux-logger": "3.0.6",
     "redux-testkit": "1.0.6",
     "rimraf": "3.0.0",
-    "sass-loader": "7.1.0",
-    "sinon": "7.3.2",
+    "sass-loader": "8.0.0",
+    "sinon": "7.5.0",
     "spectron": "7.0.0",
     "spectron-fake-dialog": "0.0.1",
-    "style-loader": "0.23.1",
-    "ts-loader": "6.0.4",
-    "ts-node": "8.3.0",
-    "tslint": "5.18.0",
-    "typescript": "3.5.3",
-    "url-loader": "2.0.1",
-    "webpack": "4.35.3",
-    "webpack-cli": "3.3.5",
-    "webpack-dev-middleware": "3.7.0",
+    "style-loader": "1.0.0",
+    "ts-loader": "6.2.1",
+    "ts-node": "8.4.1",
+    "tslint": "5.20.1",
+    "typescript": "3.7.2",
+    "url-loader": "2.2.0",
+    "webpack": "4.41.2",
+    "webpack-cli": "3.3.10",
+    "webpack-dev-middleware": "3.7.2",
     "webpack-hot-middleware": "2.25.0",
-    "webpack-merge": "4.2.1"
+    "webpack-merge": "4.2.2"
   },
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "7.5.5",
-    "@babel/plugin-proposal-decorators": "7.6.0",
-    "@babel/preset-env": "7.6.0",
-    "@babel/preset-react": "7.0.0",
-    "@babel/preset-typescript": "7.6.0",
-    "@fortawesome/fontawesome-svg-core": "1.2.22",
-    "@fortawesome/free-brands-svg-icons": "5.10.2",
-    "@fortawesome/free-regular-svg-icons": "5.10.2",
-    "@fortawesome/free-solid-svg-icons": "5.10.2",
-    "@fortawesome/react-fontawesome": "0.1.4",
-    "@types/webpack-env": "1.14.0",
+    "@babel/core": "7.7.0",
+    "@babel/plugin-proposal-class-properties": "7.7.0",
+    "@babel/plugin-proposal-decorators": "7.7.0",
+    "@babel/preset-env": "7.7.1",
+    "@babel/preset-react": "7.7.0",
+    "@babel/preset-typescript": "7.7.0",
+    "@fortawesome/fontawesome-svg-core": "1.2.25",
+    "@fortawesome/free-brands-svg-icons": "5.11.2",
+    "@fortawesome/free-regular-svg-icons": "5.11.2",
+    "@fortawesome/free-solid-svg-icons": "5.11.2",
+    "@fortawesome/react-fontawesome": "0.1.7",
+    "@types/webpack-env": "1.14.1",
     "babel-loader": "8.0.6",
     "change-case": "3.1.0",
     "classnames": "2.2.6",
+    "core-js": "3.3.6",
     "deep-equal": "1.1.0",
     "electron-debug": "3.0.1",
     "electron-dl": "1.14.0",
-    "electron-updater": "4.1.2",
-    "eslint-utils": "1.4.2",
+    "electron-updater": "4.2.0",
+    "eslint-utils": "1.4.3",
     "font-awesome": "4.7.0",
-    "history": "4.9.0",
+    "history": "4.10.1",
     "lodash-es": "4.17.15",
     "moment": "2.24.0",
-    "react": "16.8.6",
-    "react-dnd": "9.3.4",
-    "react-dnd-html5-backend": "9.3.4",
-    "react-dom": "16.9.0",
+    "react": "16.11.0",
+    "react-dnd": "9.4.0",
+    "react-dnd-html5-backend": "9.4.0",
+    "react-dom": "16.11.0",
     "react-electron-contextmenu": "1.0.0",
     "react-json-view": "1.19.1",
-    "react-redux": "7.1.0",
-    "react-router": "5.0.1",
-    "react-router-dom": "5.0.1",
+    "react-redux": "7.1.3",
+    "react-router": "5.1.2",
+    "react-router-dom": "5.1.2",
     "react-router-redux": "5.0.0-alpha.6",
-    "react-select": "3.0.4",
+    "react-select": "3.0.8",
     "react-tag-input": "6.4.1",
-    "react-tooltip": "3.10.0",
-    "react-transition-group": "4.2.1",
+    "react-tooltip": "3.11.1",
+    "react-transition-group": "4.3.0",
     "redux": "4.0.4",
     "redux-thunk": "2.3.0",
-    "source-map-support": "0.5.12",
+    "regenerator-runtime": "0.13.3",
+    "source-map-support": "0.5.16",
     "underscore": "1.9.1",
-    "use-debounce": "3.0.0"
+    "use-debounce": "3.1.0"
   },
   "devEngines": {
     "node": ">=6.x",
