--- a/package.json
+++ b/package.json
@@ -127,10 +127,10 @@
   ],
   "homepage": "https://qri.io",
   "devDependencies": {
-    "@storybook/addon-actions": "^5.2.6",
-    "@storybook/addon-links": "^5.2.6",
-    "@storybook/addon-notes": "^5.2.6",
-    "@storybook/addons": "^5.2.6",
+    "@storybook/addon-actions": "5.2.6",
+    "@storybook/addon-links": "5.2.6",
+    "@storybook/addon-notes": "5.2.6",
+    "@storybook/addons": "5.2.6",
     "@types/classnames": "2.2.9",
     "@types/enzyme": "3.10.3",
     "@types/history": "4.7.3",
@@ -142,7 +142,6 @@
     "@types/react-redux": "7.1.5",
     "@types/react-router": "5.1.2",
     "@types/react-router-dom": "5.1.2",
-    "@types/react-router-redux": "5.0.18",
     "@types/react-select": "3.0.8",
     "@types/react-tag-input": "6.1.2",
     "@types/react-tooltip": "3.11.0",
@@ -217,24 +216,27 @@
     "@fortawesome/free-regular-svg-icons": "5.11.2",
     "@fortawesome/free-solid-svg-icons": "5.11.2",
     "@fortawesome/react-fontawesome": "0.1.7",
-    "@nivo/bar": "^0.59.2",
-    "@nivo/pie": "^0.59.1",
-    "@storybook/cli": "^5.2.6",
-    "@storybook/react": "^5.2.6",
+    "@nivo/bar": "0.59.2",
+    "@nivo/pie": "0.59.1",
+    "@storybook/cli": "5.2.6",
+    "@storybook/react": "5.2.6",
     "@types/webpack-env": "1.14.1",
     "babel-loader": "8.0.6",
     "change-case": "3.1.0",
     "classnames": "2.2.6",
+    "connected-react-router": "6.6.1",
     "core-js": "3.3.6",
     "deep-equal": "1.1.0",
     "electron-debug": "3.0.1",
     "electron-dl": "1.14.0",
     "electron-updater": "4.2.0",
     "eslint-utils": "1.4.3",
+    "filesize": "6.0.1",
     "font-awesome": "4.7.0",
     "history": "4.10.1",
     "lodash-es": "4.17.15",
     "moment": "2.24.0",
+    "numeral": "2.0.6",
     "react": "16.11.0",
     "react-dnd": "9.4.0",
     "react-dnd-html5-backend": "9.4.0",
@@ -244,7 +246,6 @@
     "react-redux": "7.1.3",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
-    "react-router-redux": "5.0.0-alpha.6",
     "react-select": "3.0.8",
     "react-simplemde-editor": "4.1.0",
     "react-tag-input": "6.4.1",
