--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qri-desktop",
   "productName": "Qri Desktop",
-  "version": "0.3.0",
+  "version": "0.3.1-dev",
   "backendVersion": "0.9.3",
   "description": "Version your data with the Qri desktop app!",
   "main": "./main.js",
