test(win-e2e): Tweaks to get end-to-end tests running on Windows

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test-all": "npm run test && npm run build && npm run test-e2e",
     "test-watch": "npm test -- --watch",
     "test-e2e": "./node_modules/xvfb-maybe/src/xvfb-maybe.js cross-env NODE_ENV=test node --trace-warnings ./test/runTests.js e2e",
+    "test-win-e2e": "cross-env NODE_ENV=test node --trace-warnings ./test/runTests.js e2e",
     "hot-server": "cross-env NODE_ENV=development node --max_old_space_size=2096 server.js",
     "build-main": "cross-env NODE_ENV=production node ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.electron.js --progress --profile --colors",
     "build-renderer": "cross-env NODE_ENV=production node ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.production.js --progress --profile --colors",
@@ -163,6 +164,7 @@
     "electron": "7.1.7",
     "electron-builder": "22.1.0",
     "electron-builder-http": "19.27.5",
+    "electron-chromedriver": "^7.0.0",
     "electron-devtools-installer": "2.2.4",
     "electron-notarize": "0.2.0",
     "enzyme": "3.10.0",
