--- a/package.json
+++ b/package.json
@@ -258,6 +258,7 @@
     "redux": "4.0.4",
     "redux-thunk": "2.3.0",
     "regenerator-runtime": "0.13.3",
+    "resolve-url-loader": "^3.1.1",
     "source-map-support": "0.5.16",
     "underscore": "1.9.1",
     "use-debounce": "3.1.0",
