feat(TitleBar): ActionButton, ActionButtonBar, used to make responsive title bar
- if there is a long title, truncate and show and ellipsis. If the title is long, and you click it, it expands to show the full title
- Action buttons in the ActionBar look at the width of the div, if they are too large to fit in the width, they collapse to the hamburger.

--- a/package.json
+++ b/package.json
@@ -252,6 +252,7 @@
     "react-router-dom": "5.1.2",
     "react-select": "3.0.8",
     "react-simplemde-editor": "4.1.0",
+    "react-sizeme": "^2.6.12",
     "react-tag-input": "6.4.1",
     "react-tooltip": "3.11.1",
     "react-transition-group": "4.3.0",
