--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "moduleResolution": "node",
     "module": "commonjs",
     "jsx": "react",
+    "resolveJsonModule": true,
     "lib": [
       "dom",
       "es6",
