--- a/package.json
+++ b/package.json
@@ -164,7 +164,7 @@
     "electron": "7.1.7",
     "electron-builder": "22.1.0",
     "electron-builder-http": "19.27.5",
-    "electron-chromedriver": "^7.0.0",
+    "electron-chromedriver": "7.0.0",
     "electron-devtools-installer": "2.2.4",
     "electron-notarize": "0.2.0",
     "enzyme": "3.10.0",
@@ -231,7 +231,7 @@
     "deep-equal": "1.1.0",
     "electron-debug": "3.0.1",
     "electron-dl": "1.14.0",
-    "electron-log": "4.0.3",
+    "electron-log": "4.0.5",
     "electron-updater": "4.2.0",
     "eslint-utils": "1.4.3",
     "filesize": "6.0.1",
@@ -252,14 +252,14 @@
     "react-router-dom": "5.1.2",
     "react-select": "3.0.8",
     "react-simplemde-editor": "4.1.0",
-    "react-sizeme": "^2.6.12",
+    "react-sizeme": "2.6.12",
     "react-tag-input": "6.4.1",
     "react-tooltip": "3.11.1",
     "react-transition-group": "4.3.0",
     "redux": "4.0.4",
     "redux-thunk": "2.3.0",
     "regenerator-runtime": "0.13.3",
-    "resolve-url-loader": "^3.1.1",
+    "resolve-url-loader": "3.1.1",
     "source-map-support": "0.5.16",
     "underscore": "1.9.1",
     "use-debounce": "3.1.0",
