--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,30 @@
   "rules": {
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-member-accessibility": "off",
+    "@typescript-eslint/strict-boolean-expressions": "off",
+    "@typescript-eslint/restrict-template-expressions": "off",
+    "@typescript-eslint/prefer-optional-chain": "off",
+    "@typescript-eslint/prefer-nullish-coalescing": "off",
+    "@typescript-eslint/require-await": "off",
+    "@typescript-eslint/no-floating-promises": "off",
+    "@typescript-eslint/no-dynamic-delete": "off",
+    "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/prefer-readonly": "off",
+    "@typescript-eslint/no-var-requires": "off",
+    "@typescript-eslint/quotes": "off",
+    "array-bracket-spacing": "off",
+    "dot-notation": "off",
+    "lines-between-class-members": "off",
+    "no-useless-catch": "off",
+    "no-case-declarations": "off",
+    "object-curly-newline": "off",
+    "prefer-const": "off",
+    "quote-props": "off",
     "react/prop-types": "off"
+  },
+  "settings": {
+    "react": {
+      "version": "latest"
+    }
   }
 }
