--- a/package.json
+++ b/package.json
@@ -133,27 +133,27 @@
     "@storybook/addon-notes": "5.2.6",
     "@storybook/addons": "5.2.6",
     "@types/classnames": "2.2.9",
-    "@types/enzyme": "3.10.3",
-    "@types/history": "4.7.3",
-    "@types/jest": "24.0.22",
-    "@types/json-schema": "7.0.3",
-    "@types/react": "16.9.11",
-    "@types/react-dom": "16.9.4",
-    "@types/react-hot-loader": "4.1.0",
-    "@types/react-redux": "7.1.5",
-    "@types/react-router": "5.1.2",
-    "@types/react-router-dom": "5.1.2",
-    "@types/react-select": "3.0.8",
+    "@types/enzyme": "3.10.4",
+    "@types/history": "4.7.5",
+    "@types/jest": "25.1.1",
+    "@types/json-schema": "7.0.4",
+    "@types/react": "16.9.19",
+    "@types/react-dom": "16.9.5",
+    "@types/react-hot-loader": "4.1.1",
+    "@types/react-redux": "7.1.7",
+    "@types/react-router": "5.1.4",
+    "@types/react-router-dom": "5.1.3",
+    "@types/react-select": "3.0.10",
     "@types/react-tag-input": "6.1.2",
     "@types/react-tooltip": "3.11.0",
     "@types/react-transition-group": "4.2.3",
     "@types/redux-logger": "3.0.7",
     "@types/redux-testkit": "1.0.3",
     "@types/rimraf": "2.0.3",
-    "@types/sinon": "7.5.0",
-    "@types/underscore": "1.9.3",
-    "@typescript-eslint/eslint-plugin": "1.11",
-    "@typescript-eslint/parser": "1.11",
+    "@types/sinon": "7.5.1",
+    "@types/underscore": "1.9.4",
+    "@typescript-eslint/eslint-plugin": "2.19.0",
+    "@typescript-eslint/parser": "2.19.0",
     "asar": "2.0.1",
     "codecov": "3.6.1",
     "concurrently": "5.0.0",
@@ -170,7 +170,7 @@
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.15.1",
     "eslint": "6.6.0",
-    "eslint-config-standard-with-typescript": "7.1.0",
+    "eslint-config-standard-with-typescript": "12.0.1",
     "eslint-loader": "3.0.2",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-node": "10.0.0",
@@ -207,22 +207,22 @@
     "webpack-merge": "4.2.2"
   },
   "dependencies": {
-    "@babel/core": "7.7.0",
-    "@babel/plugin-proposal-class-properties": "7.7.0",
-    "@babel/plugin-proposal-decorators": "7.7.0",
-    "@babel/preset-env": "7.7.1",
-    "@babel/preset-react": "7.7.0",
-    "@babel/preset-typescript": "7.7.0",
+    "@babel/core": "7.8.4",
+    "@babel/plugin-proposal-class-properties": "7.8.3",
+    "@babel/plugin-proposal-decorators": "7.8.3",
+    "@babel/preset-env": "7.8.4",
+    "@babel/preset-react": "7.8.3",
+    "@babel/preset-typescript": "7.8.3",
     "@fortawesome/fontawesome-svg-core": "1.2.25",
     "@fortawesome/free-brands-svg-icons": "5.11.2",
     "@fortawesome/free-regular-svg-icons": "5.11.2",
     "@fortawesome/free-solid-svg-icons": "5.11.2",
     "@fortawesome/react-fontawesome": "0.1.7",
-    "@nivo/bar": "0.59.2",
-    "@nivo/pie": "0.59.1",
+    "@nivo/bar": "0.61.1",
+    "@nivo/pie": "0.61.1",
     "@storybook/cli": "5.2.6",
     "@storybook/react": "5.2.6",
-    "@types/webpack-env": "1.14.1",
+    "@types/webpack-env": "1.15.1",
     "babel-loader": "8.0.6",
     "change-case": "3.1.0",
     "classnames": "2.2.6",
@@ -240,6 +240,7 @@
     "lodash-es": "4.17.15",
     "moment": "2.24.0",
     "numeral": "2.0.6",
+    "prop-types": "15.7.2",
     "rc-progress": "2.5.2",
     "react": "16.11.0",
     "react-dnd": "9.4.0",
@@ -253,7 +254,7 @@
     "react-select": "3.0.8",
     "react-simplemde-editor": "4.1.0",
     "react-sizeme": "2.6.12",
-    "react-tag-input": "6.4.1",
+    "react-tag-input": "6.4.2",
     "react-tooltip": "3.11.1",
     "react-transition-group": "4.3.0",
     "redux": "4.0.4",
