--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,8 @@
 {
   "name": "qri-desktop",
   "productName": "Qri Desktop",
-  "version": "0.3.5",
-  "backendVersion": "0.9.4",
+  "version": "0.3.6-dev",
+  "backendVersion": "0.9.5-dev",
   "description": "Version your data with the Qri desktop app!",
   "main": "./main.js",
   "author": {
