chore(pacakge scripts): test-e2e runs build
to get the old "don't build first" behaviour, run "yarn test-e2e-no-build"

closes #442

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "test": "jest --testPathIgnorePatterns=.*/e2e/.* --coverage",
     "test-all": "npm run test && npm run build && npm run test-e2e",
     "test-watch": "npm test -- --watch",
-    "test-e2e": "./node_modules/xvfb-maybe/src/xvfb-maybe.js cross-env NODE_ENV=test node --trace-warnings ./test/runTests.js e2e",
-    "test-win-e2e": "cross-env NODE_ENV=test node --trace-warnings ./test/runTests.js e2e",
+    "test-e2e": "npm run build && ./node_modules/xvfb-maybe/src/xvfb-maybe.js cross-env NODE_ENV=test node --trace-warnings ./test/runTests.js e2e",
+    "test-e2e-no-build": "./node_modules/xvfb-maybe/src/xvfb-maybe.js cross-env NODE_ENV=test node --trace-warnings ./test/runTests.js e2e",
+    "test-win-e2e": "npm run build && cross-env NODE_ENV=test node --trace-warnings ./test/runTests.js e2e",
+    "test-win-e2e-no-build": "cross-env NODE_ENV=test node --trace-warnings ./test/runTests.js e2e",
     "hot-server": "cross-env NODE_ENV=development node --max_old_space_size=2096 server.js",
     "build-main": "cross-env NODE_ENV=production node ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.electron.js --progress --profile --colors",
     "build-renderer": "cross-env NODE_ENV=production node ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.production.js --progress --profile --colors",
