--- a/package.json
+++ b/package.json
@@ -238,6 +238,7 @@
     "electron-updater": "4.2.0",
     "eslint-utils": "1.4.3",
     "filesize": "6.0.1",
+    "fnv-plus": "1.3.1",
     "font-awesome": "4.7.0",
     "history": "4.10.1",
     "lodash-es": "4.17.15",
