--- a/package.json
+++ b/package.json
@@ -229,6 +229,7 @@
     "babel-loader": "8.0.6",
     "change-case": "3.1.0",
     "classnames": "2.2.6",
+    "clone-deep": "4.0.1",
     "connected-react-router": "6.6.1",
     "core-js": "3.3.6",
     "deep-equal": "1.1.0",
