--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
           command: yarn codecov
       - run:
           name: install qri backend & temp_registry_server
-          command: go get github.com/qri-io/qri github.com/qri-io/temp_registry_server
+          command: go get github.com/qri-io/qri@HEAD github.com/qri-io/temp_registry_server
       - run:
           name: create artifacts path
           command: mkdir /home/circleci/e2e_artifacts
