--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "qri-desktop",
   "productName": "Qri Desktop",
-  "version": "0.4.1",
+  "version": "0.4.2-dev",
   "description": "Version your data with the Qri desktop app!",
   "main": "main.js",
   "scripts": {
