--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,8 @@
 {
   "name": "qri-desktop",
   "productName": "Qri Desktop",
-  "version": "0.4.2-dev",
-  "backendVersion": "0.9.8-dev",
+  "version": "0.4.2",
+  "backendVersion": "0.9.8",
   "description": "Version your data with the Qri desktop app!",
   "main": "./main.js",
   "author": {
