--- a/app/package.json
+++ b/app/package.json
@@ -2,7 +2,7 @@
   "name": "qri-desktop",
   "productName": "Qri Desktop",
   "version": "0.4.4",
-  "backendVersion": "0.9.11",
+  "backendVersion": "0.9.12-dev",
   "description": "Version your data with the Qri desktop app!",
   "main": "./main.js",
   "author": {
