feat(webapp): add `webpack.config.webapp.js` to bundle a non-electron webapp

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,7 @@
 {
   "presets": ["@babel/preset-env"],
-  "plugins": ["react-hot-loader/babel"]
+  "plugins": [
+    "react-hot-loader/babel"
+    // "@babel/plugin-transform-modules-commonjs"
+  ]
 }
