--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build": "npm run build-main && npm run build-renderer",
     "start": "cross-env NODE_ENV=production electron ./app/",
     "storybook": "start-storybook -p 6006",
+    "build-webapp": "cross-env TARGET_PLATFORM=web node ./node_modules/webpack/bin/webpack --config webpack.config.webapp.js --progress --profile --colors",
     "start-hot": "cross-env HOT=1 NODE_ENV=development electron ./app/main.development",
     "postinstall": "electron-builder install-app-deps",
     "dev": "npm run hot-server -- --start-hot",
@@ -183,6 +184,7 @@
     "express": "4.17.1",
     "file-loader": "4.2.0",
     "fork-ts-checker-webpack-plugin": "3.0.1",
+    "html-webpack-plugin": "^4.4.1",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
     "json-loader": "0.5.7",
@@ -213,6 +215,7 @@
     "@babel/core": "7.8.4",
     "@babel/plugin-proposal-class-properties": "7.8.3",
     "@babel/plugin-proposal-decorators": "7.8.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
     "@babel/preset-env": "7.8.7",
     "@babel/preset-react": "7.8.3",
     "@babel/preset-typescript": "7.8.3",
