--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "start-hot": "cross-env HOT=1 NODE_ENV=development electron ./app/main.development",
     "postinstall": "electron-builder install-app-deps",
     "dev": "npm run hot-server -- --start-hot",
+    "dev-webapp": "webpack-dev-server --config webpack.config.webapp.dev.js --mode development --hot --progress --color --port 3000 --copen",
     "pack": "npm run build && electron-builder --dir",
     "dist": "npm run build && electron-builder",
     "lint": "./node_modules/.bin/eslint --ext tsx --ext ts app/",
@@ -273,6 +274,7 @@
     "underscore": "1.9.1",
     "use-debounce": "3.1.0",
     "webdriverio": "4.14.4",
+    "webpack-dev-server": "3.10.1",
     "xvfb-maybe": "0.2.1"
   },
   "devEngines": {
