--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
     "sourceMap": true,
     "target": "es5",
     "jsx": "react",
+    // umd complies the code so that it can be read in the browser
+    // coupled with the field "libraryTarget: 'umd'" inside the `webpack.config.webapp.js` file
+    // the more common `commonjs` cannot be read in the browser, but instead is made for node
     "module": "umd",
     "moduleResolution": "node",
     "experimentalDecorators": true,
