chore(build): use paths file for webpack build paths

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "test-win-e2e": "npm run build && cross-env NODE_ENV=test node --trace-warnings ./test/runTests.js e2e",
     "test-win-e2e-no-build": "cross-env NODE_ENV=test node --trace-warnings ./test/runTests.js e2e",
     "hot-server": "cross-env NODE_ENV=development node --max_old_space_size=2096 scripts/dev-server.js",
-    "build-main": "cross-env NODE_ENV=production node ./node_modules/webpack/bin/webpack --mode=production --config config/webpack.config.electron.js --progress --profile --colors",
-    "build-renderer": "cross-env NODE_ENV=production node ./node_modules/webpack/bin/webpack --mode=production --config config/webpack.config.production.js --progress --profile --colors",
+    "build-main": "cross-env NODE_ENV=production node ./node_modules/webpack/bin/webpack --mode=production --config ./config/webpack.config.electron.js --progress --profile --colors",
+    "build-renderer": "cross-env NODE_ENV=production node ./node_modules/webpack/bin/webpack --mode=production --config ./config/webpack.config.production.js --progress --profile --colors",
     "build": "npm run build-main && npm run build-renderer",
     "start": "cross-env NODE_ENV=production electron ./app/",
     "storybook": "start-storybook -p 6006",
