--- a/package.json
+++ b/package.json
@@ -187,7 +187,7 @@
     "jest": "24.9.0",
     "json-loader": "0.5.7",
     "mini-css-extract-plugin": "0.8.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "4.13.1",
     "react-hot-loader": "4.12.15",
     "react-test-renderer": "16.11.0",
     "redux-logger": "3.0.6",
@@ -225,6 +225,8 @@
     "@nivo/pie": "0.61.1",
     "@storybook/cli": "5.3.19",
     "@storybook/react": "5.2.6",
+    "@types/lodash": "4.14.161",
+    "@types/numeral": "0.0.28",
     "@types/webpack-env": "1.15.1",
     "babel-loader": "8.0.6",
     "change-case": "3.1.0",
@@ -242,12 +244,14 @@
     "fnv-plus": "1.3.1",
     "font-awesome": "4.7.0",
     "history": "4.10.1",
+    "lodash": "4.17.20",
     "lodash-es": "4.17.15",
     "moment": "2.24.0",
     "numeral": "2.0.6",
     "prop-types": "15.7.2",
     "rc-progress": "2.5.2",
     "react": "16.11.0",
+    "react-data-table-component": "6.11.5",
     "react-dnd": "9.4.0",
     "react-dnd-html5-backend": "9.4.0",
     "react-dom": "16.11.0",
@@ -267,7 +271,8 @@
     "regenerator-runtime": "0.13.3",
     "resolve-url-loader": "3.1.1",
     "source-map-support": "0.5.16",
-    "string-strip-html": "^6.0.0",
+    "string-strip-html": "6.0.0",
+    "styled-components": "5.2.0",
     "underscore": "1.9.1",
     "use-debounce": "3.1.0",
     "webdriverio": "4.14.4",
