--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,8 @@
 {
   "name": "qri-desktop",
   "productName": "Qri Desktop",
-  "version": "0.4.6-dev",
-  "backendVersion": "0.9.13-dev",
+  "version": "0.5.0",
+  "backendVersion": "0.9.13",
   "description": "Version your data with the Qri desktop app!",
   "main": "./main.js",
   "author": {
