--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "productName": "Qri Desktop",
   "version": "0.5.1-dev",
   "description": "Version your data with the Qri desktop app!",
-  "main": "main.js",
   "scripts": {
     "codecov": "./node_modules/.bin/codecov",
     "test": "jest --testPathIgnorePatterns=.*/e2e/.* --coverage",
@@ -19,9 +18,11 @@
     "build": "npm run build-main && npm run build-renderer",
     "start": "cross-env NODE_ENV=production electron ./app/",
     "storybook": "start-storybook -p 6006",
+    "build-webapp": "cross-env TARGET_PLATFORM=web node ./node_modules/webpack/bin/webpack --config webpack.config.webapp.js --progress --profile --colors",
     "start-hot": "cross-env HOT=1 NODE_ENV=development electron ./app/main.development",
     "postinstall": "electron-builder install-app-deps",
     "dev": "npm run hot-server -- --start-hot",
+    "dev-webapp": "cross-env TARGET_PLATFORM=web webpack-dev-server --config webpack.config.webapp.dev.js --mode development --hot --progress --color --port 3000 --copen",
     "pack": "npm run build && electron-builder --dir",
     "dist": "npm run build && electron-builder",
     "lint": "./node_modules/.bin/eslint --ext tsx --ext ts app/",
@@ -74,8 +75,6 @@
       "dist/",
       "node_modules/",
       "app.production.html",
-      "main.js",
-      "main.js.map",
       "package.json"
     ],
     "extraResources": [
@@ -183,6 +182,7 @@
     "express": "4.17.1",
     "file-loader": "4.2.0",
     "fork-ts-checker-webpack-plugin": "3.0.1",
+    "html-webpack-plugin": "4.4.1",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
     "json-loader": "0.5.7",
@@ -213,6 +213,7 @@
     "@babel/core": "7.8.4",
     "@babel/plugin-proposal-class-properties": "7.8.3",
     "@babel/plugin-proposal-decorators": "7.8.3",
+    "@babel/plugin-transform-modules-commonjs": "7.10.4",
     "@babel/preset-env": "7.8.7",
     "@babel/preset-react": "7.8.3",
     "@babel/preset-typescript": "7.8.3",
@@ -273,6 +274,7 @@
     "underscore": "1.9.1",
     "use-debounce": "3.1.0",
     "webdriverio": "4.14.4",
+    "webpack-dev-server": "3.10.1",
     "xvfb-maybe": "0.2.1"
   },
   "devEngines": {
