--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "storybook": "start-storybook -p 6006",
     "build-webapp": "cross-env TARGET_PLATFORM=web node ./node_modules/webpack/bin/webpack --config webpack.config.webapp.js --progress --profile --colors",
     "start-hot": "cross-env HOT=1 NODE_ENV=development electron ./app/main.development",
+    "webapp": "npm run build-webapp & serve -s app/webapp/dist",
     "postinstall": "electron-builder install-app-deps",
     "dev": "npm run hot-server -- --start-hot",
     "dev-webapp": "cross-env TARGET_PLATFORM=web webpack-dev-server --config webpack.config.webapp.dev.js --mode development --hot --progress --color --port 3000 --copen",
