--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "postinstall": "electron-builder install-app-deps",
     "dev": "npm run hot-server -- --start-hot",
     "dev-webapp": "cross-env TARGET_PLATFORM=web webpack-dev-server --config webpack.config.webapp.dev.js --mode development --hot --progress --color --port 3000 --copen",
+    "dev-remote": "cross-env REMOTE=true npm run dev-webapp",
     "pack": "npm run build && electron-builder --dir",
     "dist": "npm run build && electron-builder",
     "lint": "./node_modules/.bin/eslint --ext tsx --ext ts app/",
