chore(package.json): add `build-remote` npm run command
`build-remote` builds a production version of the remote app
`webapp` has been adjusted to be served on port 3000

--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "start": "cross-env NODE_ENV=production electron ./app/",
     "storybook": "start-storybook -p 6006",
     "build-webapp": "cross-env TARGET_PLATFORM=web node ./node_modules/webpack/bin/webpack --config webpack.config.webapp.js --progress --profile --colors",
+    "build-remote": "cross-env REMOTE=true npm run build-webapp",
     "start-hot": "cross-env HOT=1 NODE_ENV=development electron ./app/main.development",
-    "webapp": "npm run build-webapp & serve -s app/webapp/dist",
+    "webapp": "npm run build-webapp & serve -l 3000 -s app/webapp/dist",
     "postinstall": "electron-builder install-app-deps",
     "dev": "npm run hot-server -- --start-hot",
     "dev-webapp": "cross-env TARGET_PLATFORM=web webpack-dev-server --config webpack.config.webapp.dev.js --mode development --hot --progress --color --port 3000 --copen",
