--- a/package.json
+++ b/package.json
@@ -255,6 +255,7 @@
     "rc-progress": "2.5.2",
     "react": "16.11.0",
     "react-data-table-component": "6.11.5",
+    "react-diff-viewer": "^3.1.1",
     "react-dnd": "9.4.0",
     "react-dnd-html5-backend": "9.4.0",
     "react-dom": "16.11.0",
